# updated_raytracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
cmake/: FindGLUT.cmake
include/: includes.h  mathobjects.h
scripts/: reflections_edge_blender_plugin.py
src/: GUI.cpp  RayTracer.cpp  main.cpp  mathobjects.cpp  objects.cpp
